# WingDesign

./: .gitignore  README.md  config.yaml  get_freecad_csv.py  main.py  pyproject.toml  test.py  utils.py  web.py  тут что-то страшное
FreeCAD/: Body.20260124-225538.FCBak  Body.FCStd  Plane.20260124-225538.FCBak  Plane.FCStd  Spreadsheet.20260124-231710.FCBak  Spreadsheet.20260124-232419.FCBak  Spreadsheet.FCStd  Wing.20260124-225538.FCBak  Wing.FCStd  Winglet.20260124-233925.FCBak  Winglet.20260126-215337.FCBak  Winglet.FCStd
