[project]
name = "wingdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "addict>=2.4.0",
    "aerosandbox>=4.2.9",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.8",
    "pyqt5>=5.15.11",
    "pyswarms>=1.3.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.0",
]
